<resources>
    <string name="app_name">Intent starter</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="tips">Tips</string>
    <string name="tax1">Tax 1</string>
    <string name="tax2">Tax 2</string>
    <string name="external_reference">External Reference</string>
    <string name="last_transaction">Last Transaction</string>
</resources>
