<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smartpesa.sampleintent.MainActivity"
    tools:showIn="@layout/activity_main">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/amount_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/amount"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="100"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tips_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount_til"
        android:hint="@string/tips">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tips"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="10"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tax1_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tips_til"
        android:hint="@string/tax1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tax1"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="5"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tax2_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tax1_til"
        android:hint="@string/tax2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tax2"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="2"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/external_reference_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tax2_til"
        android:hint="@string/external_reference">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/external_reference"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="test data"/>

    </android.support.design.widget.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/external_reference_til">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            tools:text="Lorem ipsum dolor sit amet" />

    </ScrollView>




</RelativeLayout>
